kube/couchdb-offchain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb-offchain
  labels:
    app: couchdb-offchain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb-offchain
  template:
    metadata:
      labels:
        app: couchdb-offchain
    spec:
      containers:
      - name: couchdb
        image: couchdb:3.3
        ports:
        - containerPort: 5984
        volumeMounts:
        - name: couchdb-offchain-data
          mountPath: /opt/couchdb/data
      volumes:
      - name: couchdb-offchain-data
        persistentVolumeClaim:
          claimName: couchdb-offchain-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb-offchain
spec:
  selector:
    app: couchdb-offchain
  ports:
    - protocol: TCP
      port: 5984
      targetPort: 5984
